--- a/epam_tranning_task2/epam_tranning_task2.vcxproj.filters
+++ b/epam_tranning_task2/epam_tranning_task2.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClCompile Include="epam_tranning_task2.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="Foo.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Foo.h">
