--- a/epam_tranning_task_015/epam_tranning_task_015.vcxproj
+++ b/epam_tranning_task_015/epam_tranning_task_015.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{ea2f29f5-a99c-4fab-8ad2-d12eacbd4e08}</ProjectGuid>
-    <RootNamespace>epamtranningtask12</RootNamespace>
+    <ProjectGuid>{41e1d78d-192f-451c-a485-0b4920c27c0c}</ProjectGuid>
+    <RootNamespace>epamtranningtask015</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -139,14 +139,16 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="ErrorHeader.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Note.cpp" />
-    <ClCompile Include="TaxiCustom.cpp" />
+    <ClCompile Include="Users.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="myVector.h" />
+    <ClInclude Include="customQueue.h" />
+    <ClInclude Include="ErrorHeader.h" />
     <ClInclude Include="Note.h" />
-    <ClInclude Include="TaxiCustom.h" />
+    <ClInclude Include="Users.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
