--- a/epam_tranning_task_016/epam_tranning_task_016.vcxproj.filters
+++ b/epam_tranning_task_016/epam_tranning_task_016.vcxproj.filters
@@ -18,21 +18,15 @@
     <ClCompile Include="main.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
-    <ClCompile Include="TaxiCustom.cpp">
-      <Filter>Исходные файлы</Filter>
-    </ClCompile>
-    <ClCompile Include="Note.cpp">
-      <Filter>Исходные файлы</Filter>
-    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="myVector.h">
+    <ClInclude Include="miniQuest.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
-    <ClInclude Include="TaxiCustom.h">
+    <ClInclude Include="SimpleExplicit.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
-    <ClInclude Include="Note.h">
+    <ClInclude Include="..\epam_tranning_task_014\myVector.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
