--- a/epam_tranning_task_015/epam_tranning_task_015.vcxproj.filters
+++ b/epam_tranning_task_015/epam_tranning_task_015.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClCompile Include="main.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="myString.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="miniQuest.h">
@@ -27,6 +30,9 @@
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="..\epam_tranning_task_014\myVector.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="myString.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
