--- a/epam_tranning_test_007/epam_tranning_test_007/epam_tranning_test_007.vcxproj.filters
+++ b/epam_tranning_test_007/epam_tranning_test_007/epam_tranning_test_007.vcxproj.filters
@@ -18,24 +18,9 @@
     <ClCompile Include="main.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
-    <ClCompile Include="myString.cpp">
-      <Filter>Исходные файлы</Filter>
-    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="miniQuest.h">
-      <Filter>Файлы заголовков</Filter>
-    </ClInclude>
-    <ClInclude Include="SimpleExplicit.h">
-      <Filter>Файлы заголовков</Filter>
-    </ClInclude>
-    <ClInclude Include="..\epam_tranning_task_014\myVector.h">
-      <Filter>Файлы заголовков</Filter>
-    </ClInclude>
-    <ClInclude Include="myString.h">
-      <Filter>Файлы заголовков</Filter>
-    </ClInclude>
-    <ClInclude Include="TextView.h">
+    <ClInclude Include="customFoos.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
