--- a/epam_tranning_test_007/epam_tranning_test_007/epam_tranning_test_007.vcxproj
+++ b/epam_tranning_test_007/epam_tranning_test_007/epam_tranning_test_007.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{6923659d-1f32-4815-807c-80d7e103d91d}</ProjectGuid>
-    <RootNamespace>epamtranningtask016</RootNamespace>
+    <ProjectGuid>{f9e27638-a034-4829-8063-4a1ab9bdb3e8}</ProjectGuid>
+    <RootNamespace>epamtranningtest007</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -140,14 +140,9 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="myString.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\epam_tranning_task_014\myVector.h" />
-    <ClInclude Include="miniQuest.h" />
-    <ClInclude Include="myString.h" />
-    <ClInclude Include="SimpleExplicit.h" />
-    <ClInclude Include="TextView.h" />
+    <ClInclude Include="customFoos.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
