--- a/epam_tranning_task_017/epam_tranning_task_017/epam_tranning_task_017.vcxproj.filters
+++ b/epam_tranning_task_017/epam_tranning_task_017/epam_tranning_task_017.vcxproj.filters
@@ -23,10 +23,13 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="myVector.h">
+    <ClInclude Include="MyVector.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="StudentLib.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="IteratorTraits.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
